--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -18,25 +18,9 @@ $fileManager = dolphin
 $menu = wofi --show drun
 
 
-#################
-### AUTOSTART ###
-#################
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-# env = XCURSOR_SIZE,24
-# env = HYPRCURSOR_SIZE,24
 #####################
 ### LOOK AND FEEL ###
 #####################
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
   gaps_in = 5
   gaps_out = 20
@@ -179,8 +163,8 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, ENTER, exec, $terminal
+bind = $mainMod, SHIFT, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -190,6 +174,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
+bind = $mainMod, h, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
