failing vm init

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,17 +11,17 @@ tasks:
 
   vm:
     desc: Build the VM configuration for specified host
-    args:
-      - name: host
-        desc: The host to build
-        required: true
-        default: vm-thin
     cmds:
       - rm -rf data/{{.host}}
       - mkdir -p data/{{.host}}
       - qemu-img create -f qcow2 data/{{.host}}/drive1.qcow2 5G
       - qemu-img create -f qcow2 data/{{.host}}/drive2.qcow2 5G
-      - qemu-img create -f qcow2 data/{{.host}}/drive3.qcow2 5G
       - nix --extra-experimental-features 'nix-command flakes' build --impure .#nixosConfigurations.{{.host}}.config.system.build.vm 
-      - ./result/bin/*
+      - export QEMU_NET_OPTS="hostfwd=tcp::2221-:22" && ./result/bin/*
       - rm ./vm.qcow2
+      - rm ~/.ssh/known_hosts
+
+  install:
+    desc: SSH into the VM
+    cmds:
+      - nix --experimental-features 'nix-command flakes' run github:nix-community/nixos-anywhere -- --flake .#{{.host}} --target-host ssh://kwkaiser@vm
