--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,13 +8,16 @@ vars:
 tasks:
   homelab-vm:
     cmds:
-      - nix run .#nixosConfigurations.homelab.config.system.build.vmWithDisko
-      # - |
-      #   while true; do
-      #     kitty +kitten ssh -o ConnectTimeout=5 -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost echo 'connected' && break
-      #     echo "Connection refused, retrying in 5 seconds..."
-      #     sleep 5
-      #   done
+      - nix run .#nixosConfigurations.homelab.config.system.build.vmWithDisko > /dev/null 2>&1 &
+      - |
+        while true; do
+          ssh -o ConnectTimeout=5 -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost echo 'connected' && break
+          echo "Connection refused, retrying in 5 seconds..."
+          sleep 5
+        done
+      - sleep 5
+      - ssh -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost sudo cat /etc/rancher/k3s/k3s.yaml > ~/.kube/config
+      - kitty +kitten ssh -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost
 
   clean:
     cmds:
