--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,13 +11,13 @@ tasks:
       - nix run .#nixosConfigurations.homelab.config.system.build.vmWithDisko > /dev/null 2>&1 &
       - |
         while true; do
-          ssh -o ConnectTimeout=5 -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost echo 'connected' && break
+          ssh homelab-vm echo 'connected' && break
           echo "Connection refused, retrying in 5 seconds..."
           sleep 5
         done
       - sleep 5
-      - ssh -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost sudo cat /etc/rancher/k3s/k3s.yaml > ~/.kube/config
-      - kitty +kitten ssh -o StrictHostKeyChecking=no -p 2222 kwkaiser@localhost
+      - ssh homelab-vm sudo cat /etc/rancher/k3s/k3s.yaml > ~/.kube/config
+      - kitty +kitten ssh homelab-vm
 
   clean:
     cmds:
