--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,11 +8,11 @@ vars:
 tasks:
   homelab-vm:
     cmds:
-      - | 
+      - |
         export XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR:-/run/user/$(id -u)}
         export WAYLAND_DISPLAY=${WAYLAND_DISPLAY:-wayland-1}
         export DISPLAY=${DISPLAY:-:0}
-        nix run .#nixosConfigurations.homelab.config.system.build.vmWithDisko &
+        sudo -E nix run .#nixosConfigurations.homelab.config.system.build.vmWithDisko & # need sudo for port forwards
 
       - |
         while true; do
