--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,6 +22,20 @@ tasks:
       - sleep 10
       - ssh homelab-vm sudo cat /etc/rancher/k3s/k3s.yaml > ~/.kube/config
 
+  homelab-ports:
+    desc: Forward privileged ports (80/443) to VM services via SSH tunnel
+    cmds:
+      - |
+        echo "Waiting for VM SSH to be ready..."
+        while true; do
+          ssh homelab-vm echo 'connected' 2>/dev/null && break
+          sleep 2
+        done
+      - |
+        echo "Forwarding localhost:443 → VM:30443 and localhost:80 → VM:30080"
+        echo "Press Ctrl+C to stop"
+        sudo ssh -L 443:localhost:30443 -L 80:localhost:30080 -N homelab-vm
+
   clean:
     cmds:
       - rm -rf data
